finished modal-view

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-avatar></app-avatar>
-<!--<app-modal-view></app-modal-view>-->
+<!--<app-avatar></app-avatar>-->
+<app-modal-view></app-modal-view>
