--- a/frontend/src/app/avatar/avatar.component.scss
+++ b/frontend/src/app/avatar/avatar.component.scss
@@ -4,13 +4,15 @@
 .avatars {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 5%;
-  row-gap: 20%;
+  grid-template-rows: repeat(2, 1fr);
+  //column-gap: 5%;
+  //row-gap: 20%;
 }
 
 .avatar {
   background-image: url("Circle.png");
   background-position: center;
+  background-size : contain;
   background-repeat: no-repeat;
   grid-column: auto;
 
@@ -19,6 +21,7 @@
     margin: auto;
   }
 }
+
 
 
 
