Added relevant text/title/tagline to landing

--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -20,11 +20,11 @@
                 <div class="overlay"> </div>
                 <div class="bottomBar"> </div>
                 <div class="divtitleText">
-                    <h1 class="titleText">Website</h1>
-                    <p class="tagLine">Tagline</p>
+                    <h1 class="titleText">MSG</h1>
+                    <p class="tagLine">Meet. Schedule. Gather. </p>
                 </div>
                 <div class="divIntro">
-                    <h1 class="introText">Lorem ipsum dolor sit amet consectetur. </h1>
+                    <h1 class="introText"> Scheduling has never been easier... </h1>
                     <h3 class= "captionText">Lorem ipsum dolor sit amet consectetur. Quis lectus sed sit a molestie bibendum at tincidunt vel. Quis ipsum nulla massa mollis sed pharetra.</h3>
                 </div>
             <div class="introLine"></div>
