landing page properly css

--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -12,23 +12,26 @@
   </div>
 </nav>
 
-<div class="page-content">
-  <div class="vinetext">
-    <img class="vineWall" src="assets/green-vine-wall.jpg" alt="Wall with vines on it">
-    <div class="divIntro">
-      <h1 class="introText"> Scheduling has never been easier... </h1>
-      <h3 class= "captionText"></h3>
+<div class="title-content">
+    <div class="divtitleText">
+      <h1 class="titleText">MSG</h1>
+      <p class="tagLine">Meet. Schedule. Gather.</p>
     </div>
-  </div>
-
-  <div class="backdrop">
-    <div class="overlay">
-      <div class="divtitleText">
-        <h1 class="titleText">MSG</h1>
-        <p class="tagLine">Meet. Schedule. Gather.</p>
-      </div>
+</div>
+<div class="subtitle-content">
+  <div class="bottomBar"> </div>
+  <div class="whitespace">
+    <div class="bolded">
+      <b>Scheduling has NEVER been easier!</b>
     </div>
-    <div class="bottomBar"> </div>
+    <div class="vertical"></div>
+    <div class="reg">
+      Welcome to MSG (pronounced <em>meh-suhj</em>)!
+      The application for effectively scheduling meetings with your friends.
+      Get ready to gather, but don't forget to leave a MSG.
+    </div>
   </div>
 </div>
+
+
 
