--- a/frontend/src/app/landing/landing.component.css
+++ b/frontend/src/app/landing/landing.component.css
@@ -18,13 +18,11 @@
   font-size: 20px;
 }
 
-.vineWall{
-  position: absolute;
-  width: 100%;
-  height: 70%;
-  left: 0px;
-  top: 64px;
+.title-content{
+  background-image: url("../../assets/green-vine-wall.jpg");
+  background-repeat: no-repeat;
 }
+
 
 .overlay {
     position: absolute;
@@ -36,28 +34,55 @@
 }
 
 .bottomBar {
-    position: absolute;
-    width: 100%;
-    height: 0px;
-    left: 0px;
-    top: 77%;
-    border: 20px solid #4F6F58;
+  background-color: #4F6F58;
+  height: 2rem;
 }
 
+.whitespace {
+  padding-top: 2rem;
+  text-align: center;
+  background-color: white;
+  height: 30rem;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  column-gap: 2rem;
+}
+
+.bolded {
+  grid-column: 3 / 4;
+  grid-row: 1;
+  font-size: 25px;
+}
+
+.reg {
+  grid-column: 4 / 5;
+  grid-row: 1;
+}
+
+.vertical {
+  border-left: 2px solid #4F6F58;
+  max-height: inherit;
+  position: absolute;
+  left: 50%;
+  margin-left: -1px;
+}
 
 .divtitleText{
+  position: relative;
+  height: 30rem;
   color: whitesmoke;
   text-align: center;
+  display: block;
+  justify-content: center;
+  align-items: center;
 }
 
 .titleText{
   font-size: 50px;
+  border-radius: 10px;
+  padding-top: 10rem;
 }
 
 .introText{
   font-size: 45px;
-}
-
-.captionText {
-
 }
