--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -1,3 +1,6 @@
+.login-modal{
+  //display: none;
+}
 .modal-view {
   width: 100vw;
   height: 100vh;
@@ -11,12 +14,11 @@
   pointer-events: none;
 
   .modal-content {
-    background-color: white; /* tbd*/
-    width: fit-content;
-    block-size: fit-content;
+    background-color: white;
+    width: 70rem;
+    height: 40rem;
     padding: 1.5rem;
     border-radius: 10px;
-
   }
 }
 .back-btn {
