couple more changes to landing component

--- a/frontend/src/app/landing/landing.component.css
+++ b/frontend/src/app/landing/landing.component.css
@@ -73,6 +73,7 @@
   color: whitesmoke;
   text-align: center;
   display: block;
+  /*display: none;*/
   justify-content: center;
   align-items: center;
 }
