--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -1,34 +1,36 @@
-<nav class="navbar">
-  <div class="branding">
-    <h2> <b> MSG </b> </h2>
-  </div>
-
-  <div class="nav-links">
-    <div class="menu">
-      <a>Invitations</a>
-      <a>Events</a>
-      <a>Account</a>
+<div class="landing">
+  <nav class="navbar">
+    <div class="branding">
+      <h2> <b> MSG </b> </h2>
     </div>
-  </div>
-</nav>
 
-<div class="title-content">
+    <div class="nav-links">
+      <div class="menu">
+        <a>Invitations</a>
+        <a>Events</a>
+        <a>Account</a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="title-content">
     <div class="divtitleText">
       <h1 class="titleText">MSG</h1>
       <p class="tagLine">Meet. Schedule. Gather.</p>
     </div>
-</div>
-<div class="subtitle-content">
-  <div class="bottomBar"> </div>
-  <div class="whitespace">
-    <div class="bolded">
-      <b>Scheduling has NEVER been easier!</b>
-    </div>
-    <div class="vertical"></div>
-    <div class="reg">
-      Welcome to MSG (pronounced <em>meh-suhj</em>)!
-      The application for effectively scheduling meetings with your friends.
-      Get ready to gather, but don't forget to leave a MSG.
+  </div>
+  <div class="subtitle-content">
+    <div class="bottomBar"> </div>
+    <div class="whitespace">
+      <div class="bolded">
+        <b>Scheduling has NEVER been easier!</b>
+      </div>
+      <div class="vertical"></div>
+      <div class="reg">
+        Welcome to MSG (pronounced <em>meh-suhj</em>)!
+        The application for effectively scheduling meetings with your friends.
+        Get ready to gather, but don't forget to leave a MSG.
+      </div>
     </div>
   </div>
 </div>
