fixed modal imlementation

--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -6,9 +6,15 @@
 
     <div class="nav-links">
       <div class="menu">
-        <a>Invitations</a>
-        <a>Events</a>
-        <a>Account</a>
+        <div>
+          <button class="button-1">Invitations</button>
+        </div>
+        <div>
+          <button class="button-2">Events</button>
+        </div>
+        <div>
+          <button class="button-3" (click)="open()">Account</button>
+        </div>
       </div>
     </div>
   </nav>
