--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="login-modal">
-  <div class="modal-view">
+<div>
+  <div class="modal-body">
     <div class="modal-content">
-      <button class="back-btn"> Back </button>
+      <button class="back-btn" (click)="close()"> Back </button>
 
       <ul ngbNav #nav="ngbNav" class="nav-tabs">
         <li ngbNavItem>
