fixed bug with login

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="modal-view">
   <div class="modal-body">
     <div class="modal-content">
       <button class="back-btn" (click)="close()"> Back </button>
