--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--<app-avatar></app-avatar>-->
 <!--<app-login></app-login>-->
 
-<app-landing></app-landing>
+<!--<app-landing></app-landing>-->
+<app-profile></app-profile>
