--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -17,7 +17,7 @@
               </form>
             </div>
 
-            <button class="submit-button" type="submit" >
+            <button class="submit-button" type="submit" (click)="loginToProfile()">
               Login
             </button>
           </ng-template>
