--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -1,6 +1,3 @@
-.login-modal{
-  //display: none;
-}
 .modal-view {
   width: 100vw;
   height: 100%;
@@ -8,24 +5,50 @@
   position: absolute;
   top: 0;
   left: 0;
-  display: flex;
   justify-content: center;
-  align-items: center;
+  display: flex;
+
+  .modal-body {
+    align-self: center;
+  }
 
   .modal-content {
     background-color: white;
-    width: 70rem;
-    height: 40rem;
+    text-align: center;
+    width: 20rem;
+    height: 12rem;
     padding: 1.5rem;
     border-radius: 10px;
+    display: grid;
   }
 }
 .back-btn {
-  display: block;
+  background-color: #4F6F58;
+  border-radius: 30px;
+  border-width: 0;
+  color: white;
+  padding: .75rem;
+  text-align: center;
+  font-size: 14px;
 }
 
 .submit-button {
-  display: flex;
-  justify-content: end;
+  background-color: #4F6F58;
+  border-radius: 30px;
+  border-width: 0;
+  color: white;
+  padding: .75rem;
+  text-align: center;
+  font-size: 14px;
+}
+
+.navtab {
+  background-color: #313D34;
+  border-radius: 5px;
+  border-width: 0;
+  color: white;
+  padding: .75rem;
+  text-align: center;
+  font-size: 14px;
 }
 
